--- a/config/boards/shields/konoha/konoha.zmk.yml
+++ b/config/boards/shields/konoha/konoha.zmk.yml
@@ -3,6 +3,6 @@ id: konoha
 name: Konoha
 type: shield
 url: https://codeberg.org/konohana/zmk-config-konoha
-requires: [seeeduino_xiao_ble]
+requires: [nice_nano_v2]
 features:
   - keys
